# xper-c

./: .gitignore  CMakeLists.txt  README.md  meson.build  org.example.App.json  resource.qrc  xper-cpp.pro
build-aux/: CMakeCache.txt
data/: org.example.App.desktop.in  org.example.App.gschema.xml
include/: canvasview.h  maincanvas.h  mainwindow.h
include/canvasstates/: canvasstatesenums.h  moveitemhandler.h  selectionhandler.h  viewzoomhandler.h  zoomhandler.h
include/drawingItems/: RectItem.h
include/drawingShapes/: baseitem.h  baseshapeitem.h  customtextgraphics.h  drawingstates.h  ellipseitem.h  imageitem.h  lineitem.h  pencilitem.h  penitem.h  polygonitem.h  rectangleitem.h  textitem.h  textitemwrapper.h
include/drawingShapes/baseitems/: basepoint.h  baseshapeitem.h
include/drawingShapes/penitem/: controlpoint.h  cubic.h  pentool.h
include/drawingShapesLib/: Circle.h  Line.h  Rectangle.h  Shape.h  Square.h
include/eventfilter/: viewzoomhandler.h
include/globals/: GlobalValues.h
include/namespaces/: drawshapes.h
include/shared/: AppContainer.h  DrawOptions.h  Drawer.h  DrawerContainer.h  EditorContainer.h  MyHeaderBar.h  MyWindow.h  SidebarContainer.h
include/ui/: AppContainer.h  CanvasContainer.h  MainCanvas.h  MainWindow.h  MyWindow.h  SidebarDrawing.h  StartingBox.h
po/: POTFILES  meson.build
resource/: res.qrc
resource/glade/: about_dialog.glade~  app_container.glade~  starting_container.glade~  window.glade~
resource/glade/ui/: window.glade  window.glade~
src/: CMakeLists.txt  MyWindow.cpp  MyWindow.h  SidebarContainer.cpp  SidebarContainer.h  canvasview.cpp  main.c  main.cpp  maincanvas.cpp  mainwindow.cpp  meson.build  xper_c-window.c  xper_c-window.h  xper_c-window.ui  xper_c.gresource.xml
src/appContainer/: AppContainer.cpp
src/canvasstates/: moveitemhandler.cpp  selectionhandler.cpp  viewzoomhandler.cpp  zoomhandler.cpp
src/drawer/: DrawOptions.cpp  Drawer.cpp  DrawerContainer.cpp
src/drawingItems/: RectItem.cpp
src/drawingShapes/: Circle.cpp  Line.cpp  Rectangle.cpp  Square.cpp  baseshapeitem.cpp  customtextGraphics.cpp  ellipseItem.cpp  imageitem.cpp  lineitem.cpp  pencilitem.cpp  penitem.cpp  polygonitem.cpp  rectangleitem.cpp  textitem.cpp  textitemwrapper.cpp
src/drawingShapes/baseitems/: basepoint.cpp  baseshapeitem.cpp
src/drawingShapes/penitem/: controlpoint.cpp  cubic.cpp  pentool.cpp
src/editor_container/: EditorContainer.cpp
src/eventfilter/: viewzoomhandler.cpp
src/headerbar/: MyHeaderBar.cpp
src/sidebar/: SidebarContainer.cpp  SidebarContainer.h
src/textEditor/: EditorContainer.cpp
src/textview/: TextViewContainer.cpp  TextViewContainer.h
src/ui/: AppContainer.cpp  CanvasContainer.cpp  MainCanvas.cpp  MainWindow.cpp  MyWindow.cpp  SidebarDrawing.cpp  StartingBox.cpp
src/window/: MyWindow.cpp  MyWindow.h
style/: app-styles.css  window.css
ui/: #image_chooser_dialog.glade#  #window.glade#  button_box.glade  image_chooser_dialog.glade  mainwindow.ui  menubar.glade~  window.glade  window.glade~
